fixing margin on modal button small screen

--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -299,7 +299,9 @@ div#cFormat{
     font-size:60%;
     padding: 0 2%;
 }
-
+div#lFormat {
+    margin-bottom:2rem;
+}
 div#lFormat a{
     text-decoration: none;
     background:$anouLightBlue;
@@ -310,6 +312,7 @@ div#lFormat a{
     font-family: "Biko-std";
     box-shadow: $menuColor 5px 4px 3px;
     font-size:70%;
+    margin-bottom:1rem;
 }
 
 
